RESOLVED FIXED117622
Sometimes we stick in slow scrolling mode even after leaving a page
https://bugs.webkit.org/show_bug.cgi?id=117622
Summary Sometimes we stick in slow scrolling mode even after leaving a page
Simon Fraser (smfr)
Reported 2013-06-13 21:03:30 PDT
Sometimes we stick in slow scrolling mode even after leaving a page
Attachments
Patch (8.74 KB, patch)
2013-06-13 21:11 PDT, Simon Fraser (smfr)
sam: review+
Simon Fraser (smfr)
Comment 1 2013-06-13 21:04:15 PDT
Simon Fraser (smfr)
Comment 2 2013-06-13 21:11:21 PDT
Simon Fraser (smfr)
Comment 3 2013-06-13 21:59:27 PDT
Note You need to log in before you can comment on or make changes to this bug.